chore: refactored tournament service